--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -281,20 +281,20 @@ img:not([src]) {
     visibility: hidden;
 }
 
-img[data-src],
-img[data-srcset] {
+[data-src],
+[data-srcset] {
   display: block;
   min-height: 1px;
 
 }
 
-img[data-src].loading, img[data-srcset].loading {
+[data-src].loading, [data-srcset].loading {
       /* background: var(--gray--mid); */
       opacity: 0;
       transition: opacity 400ms cubic-bezier(0.2,1,0.3,1) 0ms;
   }
 
-img[data-src].loaded, img[data-srcset].loaded {
+[data-src].loaded, [data-srcset].loaded {
       opacity: 1;
       transition: opacity 400ms cubic-bezier(0.2,1,0.3,1) 0ms;
   }
@@ -2113,38 +2113,37 @@ blockquote {
         border-collapse: collapse;
         overflow: auto;
         width: 100%;
-
     }
 
-.content-area table thead tr td {
-                    background: var(--black);
-                    border: 1px solid rgb(74, 62, 104);
-                    padding: 1rem;
-                    font-family: 'Do Hyeon', Arial, Helvetica, sans-serif;
-                    font-size: 1rem;
-                    font-weight: bold;
-                    font-style: normal;
-                    text-transform: none;
-                    color: white;
-                    text-align: left;
-                }
+.content-area thead td {
+            background: var(--black);
+            border: 1px solid rgb(74, 62, 104);
+            padding: 1rem;
+            font-family: 'Do Hyeon', Arial, Helvetica, sans-serif;
+            font-size: 1rem;
+            font-weight: bold;
+            font-style: normal;
+            text-transform: none;
+            color: white;
+            text-align: left;
+        }
 
-.content-area table tbody tr td {
-                    background: transparent;
-                    border: 1px solid #ccc;
-                    padding: 1rem;
-                    font-family: 'Roboto', Arial, Helvetica, sans-serif;
-                    font-size: 0.85rem;
-                    font-weight: normal;
-                    font-style: normal;
-                    text-transform: none;
-                    color: var(--black);
-                    text-align: left;
-                }
+.content-area tbody td {
+            background: transparent;
+            border: 1px solid #ccc;
+            padding: 1rem;
+            font-family: 'Roboto', Arial, Helvetica, sans-serif;
+            font-size: 0.85rem;
+            font-weight: normal;
+            font-style: normal;
+            text-transform: none;
+            color: var(--black);
+            text-align: left;
+        }
 
-.content-area table tbody tr:nth-child(even) {
-                    background: hsla(0, 0%, 95%, 1);
-                }
+.content-area tbody:nth-child(even) {
+            background: hsla(0, 0%, 95%, 1);
+        }
 
 /* Horizontal Rules */
 
@@ -2500,16 +2499,12 @@ input[type="submit"] {
 
 /* State: Disabled ========================================================== */
 
-button.disabled,
-    button[disabled],
-    input[type="submit"].disabled,
-    input[type="submit"][disabled],
-    [class*="button--"].disabled,
-    [class*="button--"][disabled] {
-        pointer-events: none;
-        opacity: 0.35;
-        cursor: not-allowed;
-    }
+.disabled,
+[disabled] {
+    pointer-events: none;
+    opacity: 0.35;
+    cursor: not-allowed;
+}
 
 /* Buttons: Button Group */
 
@@ -4032,17 +4027,16 @@ a[data-sidebar-level] {
 .hero .slick-dots li {
         display: inline-block;
         padding: 0 0.25rem;
-
     }
 
-.hero .slick-dots li.slick-active button {
-                background: transparent;
+.hero .slick-dots .slick-active button {
+            background: transparent;
 
+        }
+
+.hero .slick-dots .slick-active button:after {
+                display: block;
             }
-
-.hero .slick-dots li.slick-active button:after {
-                    display: block;
-                }
 
 .hero .slick-dots button {
         border-radius: 100%;
