--- a/assets/post/core/settings.css
+++ b/assets/post/core/settings.css
@@ -185,8 +185,8 @@ img:not([src]) {
     visibility: hidden;
 }
 
-img[data-src],
-img[data-srcset] {
+[data-src],
+[data-srcset] {
   display: block;
   min-height: 1px;
 
