--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7385,3 +7385,91 @@ form input:disabled + label {
 
     }
         }
+
+/* COMPONENTS: LOADER ======================================================= */
+
+/* Page Loader: Base */
+
+/* =============================================================================
+
+    PAGE LOADER CSS
+
+    Authored by:
+        - Josh Beveridge
+        - Justin Bellefontaine
+
+============================================================================= */
+
+/* Variables ================================================================ */
+
+/* Container */
+
+/* Title */
+
+/* Message */
+
+/* Icon */
+
+/* Containers =============================================================== */
+
+.page-loader {
+    background: var(--black);
+    position: fixed;
+    z-index: 10000;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 1;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+
+}
+
+.page-loader.loaded {
+        opacity: 0;
+        transform: translate3d(0,-100%,0);
+        transition: opacity 400ms cubic-bezier(0.2,1,0.3,1) 0ms,
+                    transform 400ms cubic-bezier(0.2,1,0.3,1) 400ms;
+    }
+
+.page-loader__container {
+    text-align: center;
+}
+
+/* Title & Message ========================================================== */
+
+.page-loader__title,
+.page-loader__message {
+    margin: 0;
+    padding: 0;
+}
+
+.page-loader__title {
+    font-family: 'Do Hyeon', Arial, Helvetica, sans-serif;
+    text-transform: uppercase;
+    font-size: 1rem;
+    font-weight: bold;
+    letter-spacing: 1px;
+    color: var(--highlight);
+}
+
+.page-loader__message {
+    font-family: 'Do Hyeon', Arial, Helvetica, sans-serif;
+    text-transform: none;
+    font-size: calc(1rem*(1.333/2));
+    font-weight: normal;
+    color: white;
+}
+
+/* Icon ===================================================================== */
+
+.page-loader__icon {
+    margin: 0 0 1rem;
+}
+
+.page-loader__icon-animation circle {
+        fill: white !important;
+    }
