--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4105,6 +4105,7 @@ a[data-sidebar-level] {
         z-index: 2;
         top: 50%;
         left: 50%;
+        width: 100%;
         transform: translate(-50%,-50%);
     }
 
