--- a/assets/post/components/hero/hero.css
+++ b/assets/post/components/hero/hero.css
@@ -316,6 +316,7 @@
         z-index: 2;
         top: 50%;
         left: 50%;
+        width: 100%;
         transform: translate(-50%,-50%);
     }
 
