--- a/assets/post/components/content/content-area.css
+++ b/assets/post/components/content/content-area.css
@@ -108,7 +108,7 @@
             text-align: $table-cell-alignment;
         }
 
-        &:nth-child(even) {
+        tr:nth-child(even) {
             background: $table-alt-row-background;
         }
 
