--- a/assets/post/components/buttons/button-group.css
+++ b/assets/post/components/buttons/button-group.css
@@ -21,11 +21,10 @@
 
 /* Items ==================================================================== */
 .button-group__item {
-    padding: $button-group-item-spacing 0;
+    padding: $button-group-item-spacing;
     display: block;
 
     @media $(p-tablet) {
-        padding: 0 $button-group-item-spacing;
         display: inline-block;
         vertical-align: middle;
     }
