--- a/assets/post/spec/palette.css
+++ b/assets/post/spec/palette.css
@@ -11,7 +11,7 @@
     --gray--light: #f5f6fa;
     --blue: #49bcff;
     --purple: #ac5bff;
-    --green: #50d76e;
+    --green: #6bbd7d;
     --red: #ff5d5d;
     --orange: #ff9d00;
     --black: #1d0e42;
